force-app/main/default/objects/WRDB_Locale__mdt/WRDB_Locale__mdt.object-meta.xml
<CustomObject>
    <label>WRDB Locale</label>
    <pluralLabel>WRDB Locale</pluralLabel>
</CustomObject>