force-app/main/default/objects/WRDB_Locale__mdt/fields/DispatchCountry__c.field-meta.xml
<CustomField>
    <fullName>DispatchCountry__c</fullName>
    <label>DispatchCountry</label>
    <length>3</length>
    <type>Text</type>
</CustomField>