force-app/main/default/objects/WRDB_Locale__mdt/fields/LV_COM_Locale__c.field-meta.xml
<CustomField>
    <fullName>LV_COM_Locale__c</fullName>
    <label>LV.COM Locale</label>
    <length>6</length>
    <type>Text</type>
</CustomField>