force-app/main/default/objects/WRDB_Locale__mdt/fields/Qubit_Locale__c.field-meta.xml
<CustomField>
    <fullName>Qubit_Locale__c</fullName>
    <label>Qubit Locale</label>
    <length>6</length>
    <type>Text</type>
</CustomField>