force-app/main/default/objects/WRDB_Locale__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>IsProtected</columns>
    <columns>Catalogue_Locale__c</columns>
    <columns>DispatchCountry__c</columns>
    <columns>LV_COM_Locale__c</columns>
    <columns>OneData_Locale__c</columns>
    <columns>Page_Name__c</columns>
    <columns>Qubit_Locale__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>